更新團體專案

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div id="app" class=""></div>
-    <script type="module" src="/src/main.js"></script>
+    <div id="app" class="bg-[#f6f6f6]"></div>
+     <script type="module" src="/src/main.js"></script> 
   </body>
 </html>
