--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="/icon/logo.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/icon/logo.png" sizes="16x16" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style></style>
     <title>台中國際機場</title>
@@ -16,6 +18,6 @@
 
   <body>
     <div id="app" class="bg-[#f6f6f6]"></div>
-     <script type="module" src="/src/main.js"></script> 
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
